Added some more tests for `@JsonbNumberFormat` on other Number types Signed-off-by:Phillip Kruger <phillip.kruger@gmail.com>